# pri0-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/pri0/: __init__.py  pri0.py
src/pri0/patterns/: __init__.py  base.py  be.py  ch.py  commonProvider.py  de.py  dk.py  es.py  fr.py  gb.py  ie.py  nl.py  pl.py  pt.py  registry.py  se.py
src/pri0/patterns/countries/: be.py  ch.py  de.py  dk.py  es.py  fr.py  gb.py  ie.py  nl.py  pl.py  pt.py  se.py
tests/: test_country_patterns.py  test_generic_country.py  test_integration.py  test_patterns.py
