[project]
name = "pri0"
version = "0.1.0"
description = "A lightweight SDK for real-time sensitive data sanitization."
authors = [
    {name = "Miguel Angel Giraldo Polanco",email = "miguelgiraldo1116@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
